# treesitter

./: .gitignore  AGENTS.md  LICENSE  README.md  manifest.json  meson.build
.github/workflows/: build.yml
plugins/treesitter/: config.lua  highlights.lua  init.lua  languages.lua  style.lua  tree_sitter.lua
subprojects/: tree-sitter.wrap
subprojects/packagefiles/tree-sitter/: meson.build  meson_options.txt
tests/: tree_sitter.lua
